--- a/Home_Page.html
+++ b/Home_Page.html
@@ -37,7 +37,7 @@
         <img src="images/Audrey Pictures/AG PHD.jpg" style="width: 100%; height: 450px">
       </div>
       <div class="Slides fade">
-        <img src="images/office.png" style="width: 100%; height: 400px">
+        <img src="images/officesmall.png" style="width: 100%; height: 400px">
       </div>
       <div class="Slides fade">
         <img src="images/Audrey Pictures/AG PHD.jpg" style="width: 100%; height: 450px">
@@ -73,7 +73,7 @@
         <a href="https://www.google.com/maps/place/Audrey+R.+Gelfand,+PHD/@41.1458359,-73.8390587,17z/data=!3m1!4b1!4m6!3m5!1s0x89c2bf6148a65617:0x945021abdc9225ed!8m2!3d41.1458359!4d-73.8364838!16s%2Fg%2F1tdcy04p?entry=ttu" class="box1-link">
           <div class="box1">
             <div class="box1-image">
-              <img src="images/location.png" alt="box1">
+              <img src="images/locationsmall.png" alt="box1" style="height: 200px;">
             </div>
             <div class="box1-content">
               <a href="https://www.google.com/maps/place/Audrey+R.+Gelfand,+PHD/@41.1458359,-73.8390587,17z/data=!3m1!4b1!4m6!3m5!1s0x89c2bf6148a65617:0x945021abdc9225ed!8m2!3d41.1458359!4d-73.8364838!16s%2Fg%2F1tdcy04p?entry=ttu" class="box1-title" style="text-decoration: none;"> My Office </a>
@@ -88,7 +88,7 @@
         <a href="HTML/Client_Experiences.html">
           <div class="box1">
             <div class="box1-image">
-              <img src="images/location.png" alt="box1">
+              <img src="images/officesmall.png" alt="box1" style="height: 200px;">
             </div>
             <div class="box1-content">
               <a href="HTML/Client_Experiences.html" class="box1-title" style="text-decoration: none;"> Client Testimonials </a>
@@ -104,7 +104,7 @@
         <a href="https://www.therapyportal.com/p/audreygelfand/">
           <div class="box1">
             <div class="box1-image">
-              <img src="images/location.png" alt="box1">
+              <img src="images/patientportal.jpg" alt="box1" style="height: 200px;">
             </div>
             <div class="box1-content">
               <a href="https://www.therapyportal.com/p/audreygelfand/" class="box1-title" style="text-decoration: none;">Patient Portal</a>
