--- a/Home_Page.html
+++ b/Home_Page.html
@@ -32,7 +32,7 @@
 
     </nav>
 
-    <div class="slideshow-container">
+    <!--<div class="slideshow-container">
       <div class="Slides fade">
         <img src="images/Audrey Pictures/AG PHD.jpg" style="width: 100%; height: 450px">
       </div>
@@ -53,7 +53,7 @@
     </div>
     <br>
     <br>
-    <br>
+    <br>-->
 
     <div class="container-blocks">
       <div id="block1">
