--- a/HTML/Contanct_Info.html
+++ b/HTML/Contanct_Info.html
@@ -48,7 +48,7 @@
             <br>
             <p><a href="tel:914-282-8705" style="text-decoration: none; color: white; font-size:larger;">(914)282-8705</a></p>
             <br>
-            <p><a href="mailto:office@audreygelfand.com" style="text-decoration: none; color: white; font-size:larger;">office@audreygelfand.com</a></p>
+            <p><a href="mailto:office@audreygelfand.com" style="text-decoration: none; color: white; font-size:larger;" class="email">Audrey Gelfand</a></p>
         </div>
         
 
@@ -68,12 +68,6 @@
         </div>
         <script src="js/formSubmission.js"></script> 
         <!-- point to js script -->
-
-
-
-
-
-
 
 
         <div class="content">
