removed accessibility and feedback links

--- a/HTML/Client_Experiences.html
+++ b/HTML/Client_Experiences.html
@@ -108,10 +108,10 @@
                   <a href="mailto:  office@audreygelfand.com">Email</a>
                   <a href="tel:914-282-8705">Telephone</a>
                   <a href="https://www.google.com/maps/place/Audrey+R.+Gelfand,+PHD/@41.1458359,-73.8390587,17z/data=!3m1!4b1!4m6!3m5!1s0x89c2bf6148a65617:0x945021abdc9225ed!8m2!3d41.1458359!4d-73.8364838!16s%2Fg%2F1tdcy04p?entry=ttu">My Office</a>
-                  <a href="#">Feedback</a>
+                  <!--<a href="#">Feedback</a>-->
                 </div>
                 <div class="footer-info footer-3">
-                   <a href="#">Accessibility</a>
+                   <!--<a href="#">Accessibility</a>-->
                    <p style="text-decoration: none;">© 2023 Audrey Gelfand PH.D.</p>
                  </div>
               </div>
