attempting form submission

--- a/HTML/Contanct_Info.html
+++ b/HTML/Contanct_Info.html
@@ -91,6 +91,9 @@
             </div>
         </div>
 
+        <script src="https://wzrd.in/standalone/formdata-polyfill"></script>
+        <script src="https://wzrd.in/standalone/promise-polyfill@latest"></script>
+        <script src="https://wzrd.in/standalone/whatwg-fetch@latest"></script>
 
         <script>
             /*Open the overlay*/
@@ -119,6 +122,7 @@
             });
 
 
+            /*
             //form output
             const form = document.querySelector("#custom-form");
             form.addEventListener("submit", (e) => {
@@ -130,6 +134,18 @@
                 //clear form values
                 e.target.reset();
             });
+            */
+
+            //spreadsheet
+            const scriptURL = 'https://script.google.com/macros/s/AKfycbzf_n0nliGEqY-lCo8go9xjHE77YgF3TLz9ATOOLIneQqWZC9fwCMXNi9wKceTBOllV/exec'
+            const form = document.forms['#custom-form']
+
+            form.addEventListener('submit', e => {
+                e.preventDefault()
+                fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+                .then(response => console.log('Success!', response))
+                .catch(error => console.error('Error!', error.message))
+            })
         </script>
     </body>
 </html>
