--- a/Home_Page.html
+++ b/Home_Page.html
@@ -189,7 +189,7 @@
       });
 
 
-      /* slideshow */
+      /* slideshow
       let slideIndex = 0;
       showSlides();
 
@@ -209,6 +209,7 @@
         dots[slideIndex-1].className += " active";
         setTimeout(showSlides, 5000); // Change image every 5 seconds
       }
+      */
 
       /* button redirect for body*/
       function redirectToAboutMe() {
