--- a/HTML/404.html
+++ b/HTML/404.html
@@ -46,7 +46,7 @@
       <div class="footer-container">
         <div class="footer">
           <div class="imagefooter">
-            <img src="../images/AGTransparent.png" alt="logo2" class="logoFooter" style="height: 80px; flex-direction: column; margin-right: 4rem;">
+            <img src="../images/Audrey Pictures/AG PHD.png" alt="logo2" class="logoFooter" style="height: 80px; flex-direction: column; margin-right: 4rem;">
           </div>
           <div class="footer-info footer-1">
             <a href="../Home_Page.html">Home</a>
