looks are done 12/22/23

--- a/HTML/Contanct_Info.html
+++ b/HTML/Contanct_Info.html
@@ -93,9 +93,9 @@
             </div>
         </div>
 
-        <script src="https://wzrd.in/standalone/formdata-polyfill"></script>
+        <!--<script src="https://wzrd.in/standalone/formdata-polyfill"></script>
         <script src="https://wzrd.in/standalone/promise-polyfill@latest"></script>
-        <script src="https://wzrd.in/standalone/whatwg-fetch@latest"></script>
+        <script src="https://wzrd.in/standalone/whatwg-fetch@latest"></script>-->
 
         <script>
             /*Open the overlay*/
