--- a/HTML/About_Me.html
+++ b/HTML/About_Me.html
@@ -82,7 +82,6 @@
           <li>LGBTQ identity </li>
           <li>Gender Dysphoria </li>
           <li>Sexuality </li>
-          <li>Sexuality </li>
           <li>Illness and Chronic disease</li>
           <li>Bereavement and loss </li>
           <li>Divorce </li>
@@ -100,7 +99,7 @@
         <br>
         <p>Payment for therapy services is due at the time of service.
           Although I do not accept insurance, I accept cash, check, credit card, Venmo and Zelle.
-          All patients are given a monthly statements that can be submitted to an isurance company for reimbursement.
+          All patients are given monthly statements that can be submitted to an isurance company for reimbursement.
         </p>
 
         </div>
