--- a/HTML/Resources.html
+++ b/HTML/Resources.html
@@ -52,7 +52,7 @@
     <div class="dropdown">
       <center><button onclick="dropdown()" class="dropdownbuton" id="button"> > Websites and Aritcles</button></center>
       <div  id="dropdown-content" class="dropdown-content">
-          <h2> Helpfull Websites & Reports</h2>
+          <h2> Helpful Websites & Reports</h2>
 
           <ol class="ol">
               <li class="li">
