--- a/Home_Page.html
+++ b/Home_Page.html
@@ -32,29 +32,6 @@
 
     </nav>
 
-    <!--<div class="slideshow-container">
-      <div class="Slides fade">
-        <img src="images/Audrey Pictures/AG PHD.jpg" style="width: 100%; height: 450px">
-      </div>
-      <div class="Slides fade">
-        <img src="images/officesmall.png" style="width: 100%; height: 400px">
-      </div>
-      <div class="Slides fade">
-        <img src="images/Audrey Pictures/AG PHD.jpg" style="width: 100%; height: 450px">
-      </div>
-    </div>
-    <br>  
-    
-      
-    <div style="text-align:center">
-      <span class="dot"></span> 
-      <span class="dot"></span> 
-      <span class="dot"></span> 
-    </div>
-    <br>
-    <br>
-    <br>-->
-
     <div class="container-blocks">
       <div id="block1">
         <div class="block1-content">
@@ -122,7 +99,7 @@
         <div class="block3-content">
           <h2> Trusted Reliable Resources </h2>
           <br>
-          <p> As a licensed physician, I'm here to provide you with trusted guidance for your health concerns. Explore the following resources to help you keep your symptoms under control and improve your well-being. Click the link below for more information.</p>
+          <p> As a licensed psychologist, I'm here to provide you with trusted guidance for your mental health needs. Explore the following resources to learn more and to help you improve your well-being. Click the link below for more information.</p>
             <br>
             <br>
             <button type="button" class="button2" onclick="redirectToResources()"> Helpful Resources </button>
