--- a/HTML/Contanct_Info.html
+++ b/HTML/Contanct_Info.html
@@ -59,6 +59,12 @@
 
                 <input type="email" id="email" placeholder="Email" name="email" required>
 
+                <input type="tel" id="telephone" placeholder="Telephone" name="telephone" required>
+
+                <input type="text" id="reason" placeholder="Reason for therapy" name="reason" required>
+
+                <input type="text" id="hear" placeholder="How did you hear about us" name="hear" required>
+
                 <button type="submit">Submit</button>
             </form>
         </div>
