working when page doesnt refresh. fix that

--- a/HTML/Contanct_Info.html
+++ b/HTML/Contanct_Info.html
@@ -52,7 +52,7 @@
         </div>
 
         <div class="contact-form-container">
-            <form class="contact-form" name="contactUs-form"  id= "custom-form" method="post" onsubmit="window.location.reload()">
+            <form class="contact-form" name="contactUs-form"  id= "custom-form" method="post"> <!--onsubmit="window.location.reload()"  removed because it messes with google sheets-->
                 <input type="text" id="name" placeholder="First Name" name="name" required>
 
                 <input type="text" id="last-name" placeholder="Last Name" name="last-name" required>
