--- a/404.html
+++ b/404.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link rel="stylesheet" href="../css/404.css">
-    <link rel="stylesheet" href="../css/media.css">
+    <link rel="stylesheet" href="css/404.css">
+    <link rel="stylesheet" href="css/media.css">
     <title>Audrey Gelfand</title>
   </head>
   <body>
@@ -17,18 +17,18 @@
 
         <div class="overlay-content">
           <!-- Links-->
-          <a href="../Home_Page.html">Home</a>
-          <a href="Contanct_Info.html">Contact us</a>
-          <a href="About_Me.html">About me</a>
-          <a href="Resources.html">Resources</a>
-          <a href="Client_Experiences.html">Client Experiences</a>
+          <a href="Home_Page.html">Home</a>
+          <a href="HTML/Contanct_Info.html">Contact us</a>
+          <a href="HTML/About_Me.html">About me</a>
+          <a href="HTML/Resources.html">Resources</a>
+          <a href="HTML/Login.html">Client Experiences</a>
           <a href="https://www.therapyportal.com/p/audreygelfand/">Patient Portal</a>
         </div>
       </div>
 
       <span onclick="openLinks()">&#9776;</span>
       <!-- home link -->
-      <a href="../Home_Page.html"><img src="../images/AGTransparentCrop.png" style="height: 50px; width: 50px; margin: 15px;"></a>
+      <a href="Home_Page.html"><img src="images/AGTransparentCrop.png" style="height: 50px; width: 50px; margin: 15px;"></a>
 
     </nav>
 
@@ -46,19 +46,19 @@
       <div class="footer-container">
         <div class="footer">
           <div class="imagefooter">
-            <img src="../images/Audrey Pictures/AG PHD.png" alt="logo2" class="logoFooter" style="height: 80px; flex-direction: column; margin-right: 4rem;">
+            <img src="images/Audrey Pictures/AG PHD.png" alt="logo2" class="logoFooter" style="height: 80px; flex-direction: column; margin-right: 4rem;">
           </div>
           <div class="footer-info footer-1">
-            <a href="../Home_Page.html">Home</a>
-            <a href="About_Me.html">About</a>
-            <a href="Client_Experiences.html">Client Experiences</a>
-            <a href="Resources.html">Resources</a>
+            <a href="Home_Page.html">Home</a>
+            <a href="HTML/About_Me.html">About</a>
+            <a href="HTML/Client_Experiences.html">Client Experiences</a>
+            <a href="HTML/Resources.html">Resources</a>
           </div>
           <div class="footer-info footer-2">
             <a href="mailto:  office@audreygelfand.com">Email</a>
             <a href="tel:914-282-8705">Telephone</a>
             <a href="https://www.google.com/maps/place/Audrey+R.+Gelfand,+PHD/@41.1458359,-73.8390587,17z/data=!3m1!4b1!4m6!3m5!1s0x89c2bf6148a65617:0x945021abdc9225ed!8m2!3d41.1458359!4d-73.8364838!16s%2Fg%2F1tdcy04p?entry=ttu">My Office</a>
-            <a href="Contanct_Info.html">Contact Us</a>
+            <a href="HTML/Contanct_Info.html">Contact Us</a>
           </div>
           <div class="footer-info footer-3">
              <a href="#">Accessibility</a>
