--- a/404.html
+++ b/404.html
@@ -95,7 +95,7 @@
       });
 
       function redirectToHome() {
-        window.location.href = "../Home_Page.html";
+        window.location.href = "Home_Page.html";
       }
     </script>
       
