--- a/Home_Page.html
+++ b/Home_Page.html
@@ -17,7 +17,7 @@
 
         <div class="overlay-content">
           <!-- Links-->
-          <a href="Home_Page.html">Home</a>
+          <a href="index.html">Home</a>
           <a href="HTML/Contanct_Info.html">Contact Us</a>
           <a href="HTML/About_Me.html">About Me</a>
           <a href="HTML/Resources.html">Resources</a>
@@ -28,7 +28,7 @@
 
       <span onclick="openLinks()" style="color: black">&#9776;</span>
       <!-- home link -->
-      <a href="Home_Page.html"><img src="images/AGTransparentCrop.png" style="height: 50px; width: 50px; margin: 15px;"></img></a>
+      <a href="index.html"><img src="images/AGTransparentCrop.png" style="height: 50px; width: 50px; margin: 15px;"></img></a>
 
     </nav>
 
@@ -120,7 +120,7 @@
           <img src="images/Audrey Pictures/AG PHD.png" alt="logo2" class="logoFooter" style="height: 80px; flex-direction: column; margin-right: 4rem;">
         </div>
         <div class="footer-info footer-1">
-          <a href="Home_Page.html">Home</a>
+          <a href="index.html">Home</a>
           <a href="HTML/About_Me.html">About</a>
           <a href="HTML/Client_Experiences.html">Client Experiences</a>
           <a href="HTML/Resources.html">Resources</a>
