--- a/HTML/Resources.html
+++ b/HTML/Resources.html
@@ -19,7 +19,7 @@
 
         <div class="overlay-content">
           <!-- Links-->
-          <a href="../Home_Page.html">Home</a>
+          <a href="../index.html">Home</a>
           <a href="Contanct_Info.html">Contact us</a>
           <a href="About_Me.html">About me</a>
           <a href="Resources.html">Resources</a>
@@ -30,7 +30,7 @@
 
       <span onclick="openLinks()">&#9776;</span>
       <!-- home link -->
-      <a href="../Home_Page.html"><img src="../images/AGTransparentCrop.png" style="height: 50px; width: 50px; margin: 15px;"></a>
+      <a href="../index.html"><img src="../images/AGTransparentCrop.png" style="height: 50px; width: 50px; margin: 15px;"></a>
 
     </nav>
 
@@ -203,7 +203,7 @@
             <img src="../images/Audrey Pictures/AG PHD.png" alt="logo2" class="logoFooter" style="height: 80px; flex-direction: column; margin-right: 4rem;">
           </div>
           <div class="footer-info footer-1">
-            <a href="../Home_Page.html">Home</a>
+            <a href="../index.html">Home</a>
             <a href="About_Me.html">About</a>
             <a href="Client_Experiences.html">Client Experiences</a>
             <a href="Resources.html">Resources</a>
